[gd_scene load_steps=3 format=3 uid="uid://c70xtnchm3h8e"]

[ext_resource type="Script" path="res://UI/seller_shop_gui.gd" id="1_2xpfc"]
[ext_resource type="Texture2D" uid="uid://duryutx8j6e3x" path="res://icon.svg" id="2_fwh4f"]

[node name="seller_shop" type="Control"]
z_index = 50
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2xpfc")

[node name="TextureRect" type="TextureRect" parent="."]
modulate = Color(0.231373, 0.231373, 0.231373, 1)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.205
anchor_right = 0.5
anchor_bottom = 0.205
offset_left = -170.0
offset_top = -109.84
offset_right = 166.0
offset_bottom = 110.16
texture = ExtResource("2_fwh4f")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_vertical = 0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Loja"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="PanelContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/PanelContainer"]
layout_mode = 2
text = "Arma 1"
horizontal_alignment = 1
uppercase = true

[node name="WeponInfo1" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/PanelContainer"]
layout_mode = 2
text = "Dano: 1
Tiro/s: 1s
Velocidade: 200
"

[node name="Button_buy_wepon_1" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/PanelContainer"]
layout_mode = 2
text = "Comprar"

[node name="PanelContainer2" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/PanelContainer2"]
layout_mode = 2
text = "Arma 2"
horizontal_alignment = 1
uppercase = true

[node name="WeponInfo2" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/PanelContainer2"]
layout_mode = 2
text = "Dano: 2
Tiro/s: 0.5
Velocidade: 300
"
horizontal_alignment = 1

[node name="Button_buy_wepon_2" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/PanelContainer2"]
layout_mode = 2
text = "Comprar"

[node name="Close" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Fechar"

[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/PanelContainer/Button_buy_wepon_1" to="." method="_on_button_buy_wepon_1_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/PanelContainer2/Button_buy_wepon_2" to="." method="_on_button_buy_wepon_2_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Close" to="." method="_on_close_pressed"]
